k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: chat-app-ns
  labels:
    app: backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      name: backend-pod
      namespace: chat-app-ns
      labels:
        app: backend
    spec:
      containers:
      - name: chat-app-backend
        image: atharv2404/chat-app-backend:v1
        ports:
        - containerPort: 5001
