k8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: chat-app-ns
  labels:
    app: frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      name: frontend-pod
      namespace: chat-app-ns
      labels:
        app: frontend
    spec:
      containers:
      - name: chat-app-frontend
        image: atharv2404/chat-app-frontend:v1
        ports:
        - containerPort: 80
